  and improve reporting when falling back to enumerating all webapps

2016-02-04, Perry
 Release 1.2.12.0

2016-02-10, Perry
 Display version numbers in upgrade form title

2016-02-10, Perry
 Release 1.2.14.0

2016-03-11, Perry
 InstallerForm_Load: Don't try to load "None" logo image
 Test that SPFarm.Local is accessible early, & bail with msgbox if not
 Add solution version info above system checks
 Move solution version info into panel at bottom so always visible
 Add checkboxes for user to choose deactivate & activate
   in Upgrade/Remove and in Repair/Remove cases
 Show location summary info in repair & upgrade forms

2016-03-14, Perry
 Fix Microsoft.SharePoint.dll reference to point to installed & get rid of copy
 Delete unused folders BuildProcessTemplates & "Development V2"

2016-03-20, Perry
 Add distribution readme.html to Development source
 Add howto_release.txt to Development source
 Delete obsolete file Development/SharePoint Solution Installer.vssscc
 Delete obsolete SP2007/SP2010 project & solution files
  SharePoint Solution Installer.sln & CodePlex.SharePointInstaller.csproj
 Fix SP2013 solution (.NET 4.5, and add LocationDisplay.cs)
 Rename sln & csproj: remove 2013 suffixes
 Fix App.config
 Release SharePointInstaller-SP2013-V1.4.0
 Update AssemblyCompany with latest relevant git commit hash

2016-04-07, Perry
 Change activate & deactivate checkboxes on upgrade control
   to be wider and not auto-sized
 Bump version from 1.4.0.0 to 1.4.1.0 (odd for development)

2016-04-24, Perry
 Remove obsolete code:
   ActivationReporter.ReportSiteFeatureActivations (already commented out)
   InstallProcessControl.GetFeaturedSiteCollections
   InstallProcessControl.FeaturedSiteCollectionList
   InstallProcessControl.RecordFeaturedSites
 Rename InstallConfiguration.FeatureId to FeatureIdList
 Change InstallConfiguration.FeatureId from List to ReadOnlyCollection
  and cache it